<resources>
    <string name="app_name">SG-Trail Manager</string>
    <string name="empty_field_error">This field cannot be blank</string>
    <string name="rename">rename</string>
    <string name="csv">csv</string>
    <string name="dialog_new_sensor_title">Configure Sensors</string>
    <string name="invalid_mum_sensors">invalid number of sensors</string>
    <string name="name_title">Name</string>
    <string name="id_title">Id</string>
    <string name="map_location_title">Location</string>
    <string name="status_title">Active</string>
    <string name="type_title">Type</string>
    <string name="time_title">Time</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="content_delete_extra_sensor">The System has more sensors than configured, do you want to delete extra
        sensors ?
    </string>
    <string name="remove_extra_sensors">Remove extra sensors</string>
    <string name="csv_date_title"><![CDATA[Date&Time]]></string>
    <string name="csv_name_title">Sensor Name</string>
    <string name="csv_id_title">Id</string>
    <string name="csv_alarm_type_title">Alarm Type</string>
    <string name="csv_latitude_title">latitude</string>
    <string name="csv_longitude_title">longitude</string>
    <string name="cameras_title">Cameras</string>
    <string name="map_title">Map</string>
    <string name="config_title">Configuration</string>
    <string name="alarm_log_title">Alarm</string>
    <string name="not_located">Not Located</string>
    <string name="located">Located</string>
    <string name="date_title">Date</string>
    <string name="date_title1">Date:</string>
    <string name="save">Save</string>
    <string name="define_sensor_amount">Define sensor amount</string>
    <string name="choose_alarm_sound">Choose alarm sound</string>
    <string name="vibration_when_alarm">Vibration when alarm</string>
    <string name="alarm_flickering_time">Alarm flickering time</string>
    <string name="default_str">Default</string>
    <string-array name="state_types">
        <item>car</item>
        <item>intruder</item>
        <item>not in use</item>
        <item>sensor disconnected</item>
        <item>system ok</item>
        <item>low battery</item>
        <item>dual tech alarm</item>
    </string-array>
    <string name="load_settings_export_settings">Load settings / export settings</string>
    <string name="map_view">Map view</string>
    <string name="language">Language</string>
    <string name="satellite">satellite</string>
    <string name="map">map</string>
    <string name="sensors_save_successfully">The sensors were successfully saved</string>
    <string name="time_flickering_save_successfully">Time flickering was successfully saved</string>
    <string name="english">English</string>
    <string name="no_selected_sound">no selected sound</string>
    <string name="channel_name">my_channel_01_name</string>
    <string name="channel_description">my_channel_01_description</string>
    <string name="share">Share</string>
    <string name="enter_code">enter activation code</string>
    <string name="wrong_activate_code">wrong activate code</string>
    <string name="sign_in">sign in</string>
    <string name="activate">Activate</string>
    <string name="error">Error</string>
    <string name="general_desc">description</string>
    <string name="email_subject">My Code for SG-Trail Manager App</string>
    <string name="camera_system_title">Cameras and systems</string>
    <string name="system_camera_configuration">System / Camera Settings</string>
    <string name="system_camera_name">System Name:</string>
    <string name="tel_num_title">Phone Number:</string>
    <string name="camera_type_title">Camera Model:</string>
    <string name="mail_address_title">Sending email:</string>
    <string name="password_title">Password:</string>
    <string name="incoming_email_server_title">Incoming Email server:</string>
    <string name="incoming_email_server_port_title">Incoming Email Port:</string>
    <string name="use_ssl_title">Using SSL:</string>
    <string name="date_last_visit_title">Last visit date:</string>
    <string name="description">description</string>
    <string name="cancel">Cancel</string>
    <string name="time_title1">time:</string>
    <string name="name_title1">name:</string>
    <string name="grid_view">grid view</string>
    <string name="list_view">list view</string>
    <string name="alarm_display">alarm display</string>
    <string name="systems_filter">System</string>
    <string name="date_time">Date and time</string>
    <string name="filter_by">Filter by:</string>
    <string name="apply">apply</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="ok">OK</string>
    <string name="date_older">End date may not be earlier than start date</string>
    <string name="validation_error">validation error</string>
    <string name="validation_successfully">The verification was successful</string>
    <string name="no_photo">no photo</string>
    <string name="select_all">Select all</string>
    <string name="select">Select</string>
    <string name="do_you_realy_want_delete_selected_alarm">Do you realy want to delete selected alarms?</string>
    <string name="no_selected_alarms">No selected alarm</string>
    <string name="selected_alarms">selected alarm</string>
    <string name="reset">reset</string>
    <string name="get_snapshot_email">Get snapshot to email</string>
    <string name="delete_all_images">Delete all images</string>
    <string name="get_battery_status">Get battery status</string>
    <string name="get_parameters">Get parameters</string>
    <string name="arm_camera">Arm camera</string>
    <string name="disarm_camera">Disarm camera</string>
    <string name="set_email_recipient">Set email recipients</string>
    <string name="set_mms_recipients">Set MMS recipients</string>
    <string name="missing_phone_number">Missing phone number</string>
    <string name="emails_title">Add emails</string>
    <string name="send">Send</string>
    <string name="email1">Email 1</string>
    <string name="email2">Email 2</string>
    <string name="email3">Email 3</string>
    <string name="email4">Email 4</string>
    <string name="add_phone_numbers_title">Add phone numbers</string>
    <string name="phone_num_1">Phone number 1</string>
    <string name="phone_num_2">Phone number 2</string>
    <string name="phone_num_3">Phone number 3</string>
    <string name="phone_num_4">Phone number 4</string>
    <string name="you_need_at_least_one_email">You need at least one email</string>
    <string name="you_need_at_least_one_phone_num">You need at least one phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="set_admin_title">Set admin</string>
    <string name="incorrect_phone_number_or_password">Incorrect phone number or password</string>
    <string name="phone_num">Phone number:</string>
    <string name="phone_num_title">Phone number</string>
    <string name="settings">Settings</string>
    <string name="commands">Commands</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="commands_camera_title">Command</string>
    <string name="get_snapshot_mms">Get snapshot to MMS</string>
    <string name="oredr_cannot_sent">Orders cannot be sent without a phone number</string>
    <string name="invalid_telephone_number">Invalid telephone number</string>
    <string name="camera_title">Camera</string>
    <string name="camera_settings">Camera settings</string>
    <string name="more_orders">More orders</string>
    <string name="take_a_proactive_picture">Take a picture</string>
    <string name="add_recipient_to_mms">Add recipient to MMS</string>
    <string name="add_recipient_to_email">Add recipient to email</string>
    <string name="send_via_mms">Send via MMS</string>
    <string name="send_over_the_internet">Send over the Internet</string>
    <string name="receipt_only_in_mms">Receipt only in MMS</string>
    <string name="reception_only_by_email">Reception only by email</string>
    <string name="parameter_testing">Parameter Testing</string>
    <string name="signal_testing">Signal Testing</string>
    <string name="battery_test">Battery test</string>
    <string name="delete_recipients_for_mms">Delete recipients for MMS</string>
    <string name="delete_recipients_by_email">Delete recipients by email</string>
    <string name="receive_email_and_MMS">Receive email and MMS</string>
    <string name="sending_mode_operational">Sending Mode - Operational</string>
    <string name="sending_mode_daily_report">Sending Mode - Daily Report</string>
    <string name="sending_mode_off">Sending Mode - Off</string>
    <string name="photo_mode_photo">Photo mode - Photo</string>
    <string name="photo_mode_video">Photo mode - Video</string>
    <string name="photo_mode_photo_video">Photo Mode - Photo + Video</string>
    <string name="image_quality_low">Image quality - low</string>
    <string name="image_quality_medium">Image Quality - Medium</string>
    <string name="image_quality_high">Image quality - high</string>
    <string name="sensor_approaches_off">Sensor Approaches - Off</string>
    <string name="sensor_sensitivity_high">Sensor Sensitivity - High</string>
    <string name="sensor_sensitivity_medium">Sensor Sensitivity - Medium</string>
    <string name="sensor_sensitivity_low">Sensor Sensitivity - Low</string>
    <string name="enable_remote_control">Enable remote control</string>
    <string name="turn_off_remote_control">Turn off remote control</string>
    <string name="update_time_and_date">Update time and date</string>
    <string name="selecting_quantity_of_pictures_unlimited">Selecting Quantity of Pictures - Unlimited</string>
    <string name="image_quantity_selection_manual">Image Quantity Selection - Manual</string>
    <string name="image_quantity_selection_zero_counter">Image Quantity Selection - Zero Counter</string>
    <string name="main_commands">Main commands</string>
    <string name="email_title">Add email</string>
    <string name="add_phone_number_title">Add a phone number</string>
    <string name="email_must_contain">Email must contain @</string>
    <string name="select_multiple_photos">Select multiple photos</string>
    <string name="one_to_ninety_nine">1–99</string>
    <string name="time_synchronization">Time synchronization</string>
    <string name="get_parameters_mms">Get parameters MMS</string>
    <string name="get_parameters_internet">Get parameters internet</string>
    <string name="help">Help</string>
    <string name="setting_the_camera_mode">Setting the camera mode</string>
    <string name="picture">picture</string>
    <string name="video">video</string>
    <string name="picture_video"><![CDATA[picture&video]]></string>
    <string name="picture_quality">picture quality</string>
    <string name="continuous_photo_taking">Continuous photo taking</string>
    <string name="photos_1">1 photos</string>
    <string name="photos_2">2 photos</string>
    <string name="photos_3">3 photos</string>
    <string name="photos_4">4 photos</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">Saturday</string>
    <string name="cellcom">cellcom</string>
    <string name="golan_telecom">golan telecom</string>
    <string name="partner">partner</string>
    <string name="cell_phone">cell phone</string>
    <string name="hot_mobile">hot mobile</string>
    <string name="rami_levi">rami levi</string>
    <string name="config_mms">Manual configuration settings MMS</string>
    <string name="config_email">manual email configuration settings</string>
</resources>