<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="580dp"
        android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCommandTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialmt"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5.6sp"
            android:text="title"
            android:textColor="@color/medium_green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100" />

    <CheckBox
            android:id="@+id/cbSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:text="@string/select_all"
            android:textSize="14.7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.170" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendCommand"
            android:layout_width="90dp"
            android:layout_height="31.7dp"
            android:background="@color/green1"
            android:fontFamily="@font/arialmt"
            android:lineSpacingExtra="-9.9sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18.7sp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="90dp"
            android:layout_height="31.7dp"
            android:background="@color/red4"
            android:fontFamily="@font/arialmt"
            android:lineSpacingExtra="-9.9sp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18.7sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




    <CheckBox
            android:id="@+id/cbSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.170" />

    <CheckBox
            android:id="@+id/cbMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbSunday"
            app:layout_constraintTop_toBottomOf="@+id/cbSunday" />


    <CheckBox
            android:id="@+id/cbTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbMonday"
            app:layout_constraintTop_toBottomOf="@+id/cbMonday" />

    <CheckBox
            android:id="@+id/cbWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbTuesday"
            app:layout_constraintTop_toBottomOf="@+id/cbTuesday" />


    <CheckBox
            android:id="@+id/cbThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbWednesday"
            app:layout_constraintTop_toBottomOf="@+id/cbWednesday" />

    <CheckBox
            android:id="@+id/cbFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbThursday"
            app:layout_constraintTop_toBottomOf="@+id/cbThursday" />

    <CheckBox
            android:id="@+id/cbSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textSize="14.7sp"
            app:layout_constraintStart_toStartOf="@+id/cbFriday"
            app:layout_constraintTop_toBottomOf="@+id/cbFriday" />


</androidx.constraintlayout.widget.ConstraintLayout>